# gbmu_final

./: .gitignore  Cargo.toml  README.md  cat.txt  gbmu.conf  gbmu.ron  me  message.txt  roms.conf
app/: Cargo.toml
app/src/: app.rs  main.rs
app/src/render/: dbg.rs  egui_context.rs  mod.rs  pixels.rs  windows.rs
bus/src/: io.rs  lib.rs
core/: Cargo.toml
core/src/: cpu.rs  dbg_opcodes.rs  decode.rs  lib.rs  registers.rs
core/src/ops/: alu.rs  bits.rs  dec.rs  inc.rs  mem.rs  mod.rs  read.rs  write.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  emulator.rs  log.rs  main.rs  settings.rs
crates/app/src/app/: config.rs  render.rs  watcher.rs
crates/app/src/app/render/: rom.rs  shelves.rs  state.rs
crates/app/src/emulator/: joy.rs
crates/app/src/render/: egui_context.rs  mod.rs  raw_context.rs  windows.rs
crates/app/src/settings/: audio.rs  device.rs  keybinds.rs  video.rs
crates/apu/: Cargo.toml
crates/apu/src/: apu.rs  driver.rs  dsg.rs  lib.rs
crates/apu/src/apu/: dsg.rs  registers.rs
crates/apu/src/apu/dsg/: channel.rs
crates/apu/src/apu/dsg/channel/: envelope.rs  noise.rs  pulse.rs  wave.rs
crates/bus/: Cargo.toml
crates/bus/src/: devices.rs  dma.rs  hdma.rs  io.rs  lib.rs  timer.rs
crates/core/: Cargo.toml
crates/core/src/: cpu.rs  decode.rs  lib.rs  registers.rs
crates/core/src/ops/: alu.rs  dec.rs  inc.rs  int.rs  mem.rs  mod.rs  read.rs  write.rs
crates/cpu/: Cargo.toml
crates/cpu/src/: cpu.rs  decode.rs  lib.rs  registers.rs
crates/cpu/src/ops/: alu.rs  bits.rs  cond.rs  dec.rs  inc.rs  int.rs  mem.rs  read.rs  write.rs
crates/dbg/: Cargo.toml
crates/dbg/src/: dbg_opcodes.rs  lib.rs  render.rs
crates/dbg/src/disassembly/: dbg_opcodes.rs  mod.rs
crates/dbg/src/memory/: mod.rs
crates/dbg/src/render/disassembly/: mod.rs
crates/dbg/src/render/memory/: mod.rs
crates/joy/: Cargo.toml
crates/joy/src/: lib.rs
crates/lcd/: Cargo.toml
crates/lcd/src/: lib.rs
crates/mem/: Cargo.toml
crates/mem/src/: boot.rs  hram.rs  lib.rs  lock.rs  oam.rs  vram.rs  wram.rs
crates/mem/src/mbc/: mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
crates/ppu/: Cargo.toml
crates/ppu/src/: dma.rs  fetcher.rs  hdma.rs  lib.rs  ppu.rs  render.rs
crates/ppu/src/ppu/: cram.rs  fetcher.rs  fifo.rs  pixel.rs  registers.rs  states.rs
crates/ppu/src/render/: bgmap.rs  oam.rs  tabs.rs  tilemap.rs
crates/serial/: Cargo.toml
crates/serial/src/: com.rs  lib.rs  protocol.rs
crates/shared/: Cargo.toml
crates/shared/src/: audio_settings.rs  breakpoints.rs  cpu.rs  emulator.rs  input.rs  io.rs  lib.rs  mem.rs  opcodes.rs  registers.rs  value.rs
crates/shared/src/io/: devices.rs  io_regs.rs
crates/shared/src/mem/: lock.rs
crates/shared/src/opcodes/: dbg.rs
crates/shared/src/rom/: header.rs  mod.rs
crates/shared/src/utils/: clock.rs  convert.rs  image.rs  mod.rs  palette.rs  rtc.rs  serde_arrays.rs
crates/shared/src/widgets/: mod.rs  section.rs  tabs.rs
dbg/: Cargo.toml
dbg/src/: dbg_opcodes.rs  lib.rs  render.rs
lcd/: Cargo.toml
lcd/src/: lib.rs
mem/: Cargo.toml
mem/src/: oam.rs
mem/src/mbc/: mbc0.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
patches/egui_wgpu_backend/: Cargo.toml
patches/egui_wgpu_backend/src/: lib.rs
patches/egui_wgpu_backend/src/shader/: egui.wgsl
patches/egui_winit_platform/: Cargo.toml
patches/egui_winit_platform/src/: lib.rs
roms/19903/: The Castlevania Adventure (Patch FR).gb
roms/29459/: 29459.sav  29459.sav~f0615d971084f552d60cb486ddc8bbea55368017  Pokemon Blue.bak
roms/8997/: 29356.rtc  Pokemon Crystal.bak
save_states/: test.save_state
shared/: Cargo.toml
shared/src/: lib.rs  opcodes.rs  registers.rs  value.rs
shared/src/rom/: header.rs
