[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[profile.release-thin]
inherits = "release"
opt-level = "z"
debug = false
lto = true
codegen-units = 1
strip = true

[workspace]
resolver = "2"
members = [
    "crates/cpu",
    "crates/lcd",
    "crates/app",
    "crates/apu",
    "crates/bus",
    "crates/dbg",
    "crates/shared",
    "crates/ppu",
    "crates/mem",
    "crates/serial"
]

#[patch.crates-io]
#egui_wgpu_backend = { path = "patches/egui_wgpu_backend" }
#egui_winit_platform = { path = "patches/egui_winit_platform" }
