[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.10.0"
log = "0.4.17"
env_logger = "0.10.0"

[features]
debug = ["core/log_opcode"]

[dependencies.core]
path = "../core"

