[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.11.0"
log = "0.4.17"
env_logger = "0.10.0"
winit = "0.27.5"
egui = "0.20.1"
egui_extras = "0.20.0"
egui-winit = "0.20.1"
pollster = "0.2.5"
wgpu = "0.15.0"
egui_wgpu_backend = "0.21.0"
egui_winit_platform = "0.17.0"

[features]
debug = ["core/log_opcode"]

[dependencies.core]
path = "../core"
