[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
anyhow = "1.0.69"
env_logger = "0.10.0"

egui_winit_platform = "0.17.0"
wgpu = "0.14.0"
egui_wgpu_backend = "0.21.0"
rfd = "0.11.0"

walkdir = "2.3.2"
toml = "0.7.2"
pollster = "0.2.5"

[dependencies.winit]
version = "0.27.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[features]
debug = ["cpu/log_opcode"]
file_log = []

[dependencies.shared]
path = "../shared"
[dependencies.cpu]
path = "../cpu"
[dependencies.lcd]
path = "../lcd"
[dependencies.bus]
path = "../bus"
[dependencies.mem]
path = "../mem"
[dependencies.dbg]
path = "../dbg"
[dependencies.ppu]
path = "../ppu"
