[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = ["apu/debug"]
file_log = []

[dependencies]
log = "0.4.17"
anyhow = "1.0.69"
env_logger = "0.10.0"

notify = "5.1.0"

egui_winit_platform = "0.17.0"
wgpu = "0.14.0"
egui_wgpu_backend = "0.21.0"
rfd = "0.11.0"

walkdir = "2.3.2"
pollster = "0.2.5"

[dependencies.serde_any]
version = "0.5.0"
features = ["ron"]

[dependencies.winit]
version = "0.27.5"
features = ["serde"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.dbg]
path = "../dbg"

[dependencies.shared]
path = "../shared"
[dependencies.bus]
path = "../bus"
[dependencies.ppu]
path = "../ppu"
[dependencies.serial]
path = "../serial"
[dependencies.apu]
path = "../apu"
[dependencies.mem]
path = "../mem"
