[package]
name = "bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.38"

[features]
doctor = []

[dependencies.shared]
path = "../shared"

[dependencies.mem]
path = "../mem"
