[package]
name = "bus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serial = []
audio = []

[dependencies]
log = "0.4.17"
thiserror = "1.0.38"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.shared]
path = "../shared"
[dependencies.joy]
path = "../joy"
[dependencies.serial]
path = "../serial"
[dependencies.cpu]
path = "../cpu"
[dependencies.lcd]
path = "../lcd"
[dependencies.mem]
path = "../mem"
[dependencies.ppu]
path = "../ppu"
[dependencies.apu]
path = "../apu"
