[package]
name = "mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
dyn-clone = "1.0.11"
bincode = "1.3.3"

[dependencies.shared]
path= "../shared"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]