[package]
name = "ppu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
bincode = "1.3.3"

[dependencies.shared]
path = "../shared"

[dependencies.lcd]
path = "../lcd"

[dependencies.mem]
path = "../mem"

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
