[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
thiserror = "1.0.38"
log = "0.4.17"
image = "0.24.5"

[dependencies.egui]
version = "0.21.0"
features = ["serde"]

[dependencies.winit]
version = "0.28.7"
features = ["serde"]

[dependencies.egui_extras]
version = "0.21.0"
features = ["svg"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
